@@ -4,7 +4,6 @@ import io.github.senerh.domain.util.Validations;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class File {
 
@@ -13,18 +12,20 @@ public class File {
     private final String mimeType;
     private final String description;
     private final List<String> tags;
-    private final String thumbnailLink;
+    private final String smallThumbnailLink;
+    private final String largeThumbnailLink;
     private final String downloadLink;
     private final String previewLink;
     private final LocalDate creationDate;
 
-    public File(String id, String name, String mimeType, String description, List<String> tags, String thumbnailLink, String downloadLink, String previewLink, LocalDate creationDate) {
+    public File(String id, String name, String mimeType, String description, List<String> tags, String smallThumbnailLink, String largeThumbnailLink, String downloadLink, String previewLink, LocalDate creationDate) {
         this.id = Validations.notBlank(id, "File.id");
         this.name = Validations.notBlank(name, "File.name").trim();
         this.mimeType = Validations.notBlank(mimeType, "File.mimeType").trim();
         this.description = description;
-        this.tags = Validations.notNull(tags, "File.tags").stream().map(t -> Validations.notBlank(t, "File.tag")).distinct().collect(Collectors.toList());
-        this.thumbnailLink = Validations.notBlank(thumbnailLink, "File.thumbnailLink").trim();
+        this.tags = Validations.notNull(tags, "File.tags").stream().map(t -> Validations.notBlank(t, "File.tag")).distinct().toList();
+        this.smallThumbnailLink = Validations.notBlank(smallThumbnailLink, "File.smallThumbnailLink").trim();
+        this.largeThumbnailLink = Validations.notBlank(largeThumbnailLink, "File.largeThumbnailLink").trim();
         this.downloadLink = Validations.notBlank(downloadLink, "File.downloadLink").trim();
         this.previewLink = Validations.notBlank(previewLink, "File.previewLink").trim();
         this.creationDate = Validations.notNull(creationDate, "File.creationDate");
@@ -50,8 +51,12 @@ public class File {
         return tags;
     }
 
-    public String getThumbnailLink() {
-        return thumbnailLink;
+    public String getSmallThumbnailLink() {
+        return smallThumbnailLink;
+    }
+
+    public String getLargeThumbnailLink() {
+        return largeThumbnailLink;
     }
 
     public String getDownloadLink() {
